Replace minified versions of third-party libraries.

--- a/pageAction/index.html
+++ b/pageAction/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="jszip.min.js"></script>
-    <script src="FileSaver.min.js"></script>
+    <script src="jszip.js"></script>
+    <script src="FileSaver.js"></script>
   </body>
 </html>
