Fix downloading and add progress bar.

--- a/pageAction/index.html
+++ b/pageAction/index.html
@@ -11,6 +11,9 @@
     </div>
 
     <div class="info">
+      <p>Please, don't close the popup!</p>
+      <label for="download-progress">Dowloading files</label>
+      <progress id="download-progress" value="0" max="100"></progress>
     </div>
 
     <div class="download-panel">
